<resources>
    <string name="app_name">CryptoCoins</string>

    <!-- Drawer titles -->
    <string name="drawer_title">The Crypto App</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="drawer_list">List</string>
    <string name="drawer_notifications">Notifications</string>
    <string name="drawer_news">News</string>
    <string name="drawer_converter">Converter</string>
    <string name="drawer_remove_ads">Remove ads</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about_us">About us</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
</resources>
