<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_favourites"
              android:icon="@drawable/ic_star"
              android:title="@string/drawer_favourites" />
        <item android:id="@+id/nav_item_list"
              android:icon="@drawable/ic_list"
              android:title="@string/drawer_list" />
        <item android:id="@+id/nav_item_notification"
              android:icon="@drawable/ic_notification"
              android:title="@string/drawer_notifications" />
        <item android:id="@+id/nav_item_news"
              android:icon="@drawable/ic_earth"
              android:title="@string/drawer_news" />
        <item android:id="@+id/nav_item_remove_ads"
              android:icon="@drawable/ic_ad"
              android:title="@string/drawer_remove_ads" />
        <item android:id="@+id/nav_item_settings"
              android:icon="@drawable/ic_settings"
              android:title="@string/drawer_settings" />
        <item android:id="@+id/nav_item_about_us"
              android:icon="@drawable/ic_about"
              android:title="@string/drawer_about_us" />
    </group>
</menu>